First cut at the SPI-responder module.

--- a/Firmware/Master/src/Makefile
+++ b/Firmware/Master/src/Makefile
@@ -2,7 +2,8 @@
 
 ########################################################################
    SOURCES := main.c anim.c button.c config.c console.c gpio.c midi.c	\
-              spi.c spi-proto.c state.c systick.c usb-midi.c
+              spi.c spi-proto.c spi-responder.c state.c systick.c       \
+              usb-midi.c
     CFILES := $(filter %.c, $(SOURCES))
     OFILES := $(CFILES:%.c=%.o)
 
