Rewrote LED animation.  Easier to change, better UI.

--- a/Firmware/Master/src/Makefile
+++ b/Firmware/Master/src/Makefile
@@ -5,7 +5,7 @@ endif
 
 ########################################################################
    SOURCES := main.c anim.c button.c config.c console.c gpio.c          \
-              lcd-dma.c midi.c sdram.c spi.c spi-proto.c                \
+              lcd-dma.c midi.c modes.c sdram.c spi.c spi-proto.c        \
               spi-responder.c state.c systick.c usb-midi.c
     CFILES := $(filter %.c, $(SOURCES))
     OFILES := $(CFILES:%.c=%.o)
@@ -20,7 +20,7 @@ endif
 ARCH_FLAGS := -mthumb -mcpu=cortex-m4 $(FP_FLAGS)
 
   CPPFLAGS := -MD -I$(L3_INCDIR) $(DEFS)
-    CFLAGS := -std=gnu99 -Os -g -Wall -Wundef -Werror \
+    CFLAGS := -std=gnu99 -O0 -g -Wall -Wundef -Werror \
               -fno-common -ffunction-sections -fdata-sections \
               $(CPPFLAGS) $(ARCH_FLAGS)
    LDFLAGS := -g --static -nostartfiles \
